style card infos, alignment and fix header

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
 
 .header {
     padding: 8px 16px;
-    width: 100%;
     font-weight: 700;
     background: #1F2937;
     font-size: 18px;
@@ -27,16 +26,10 @@ a {
 
 .hero {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     height: 400px;
     background-color: #1F2937;
-}
-
-.hero {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .hero-stuff {
@@ -82,22 +75,27 @@ button:hover {
 }
 
 .info {
-    height: 400px;
+    height: auto;
     display: flex;
     flex-direction: column;
+    border: #1d70f7;
 }
 
 .info-header {
     display: flex;
     justify-content: center;
     padding: 16px;
-    border: 1px solid black;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    margin-bottom: 16px;
 }
 
 .card-container {
     display: flex;
-    justify-content: space-evenly;
-    border: 1px solid blue;
+    justify-content: center;
+    gap: 32px;
+    flex-wrap: wrap;
 }
 
 .card img {
@@ -111,8 +109,20 @@ button:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid red;
     width: 300px;
     height: 300px;
     flex-wrap: wrap;
+}
+
+.card p {
+    padding-left: 8px;
+    padding-right: 8px;
+    text-align: center;
+    flex: 1;
+    color: #8c8f94;
+}
+
+.card img {
+    border: 3px solid #1d70f7;
+    border-radius: 10px;
 }
